--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,36 +1,74 @@
 /* Fondo y contenedor principal del Hero */
-.hero {
-  position: relative;
-  width: 100%;
-  height: 80vh;
-
+.layout {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  
+padding: 40px;
+justify-content: center;
+align-items: center;
+gap: 24px;
+height: 70vh;
+align-self: stretch;
 }
 
+.hero {
+  display: flex;
+padding: 40px;
+align-items: center;
+gap: 16px;
+border-radius: 16px;
+background: #FFF;
+
+/* hover shadow */
+box-shadow: 0px 17px 5px 0px rgba(228, 52, 122, 0.00), 0px 11px 4px 0px rgba(228, 52, 122, 0.01), 0px 6px 4px 0px rgba(228, 52, 122, 0.05), 0px 3px 3px 0px rgba(229, 230, 235, 0.09), 0px 1px 1px 0px rgba(228, 52, 122, 0.10);
+
+animation: fadeIn 1s ease-in-out;
+}
+
+img {
+  width: 266px;
+height: 261px;
+}
 
 /* Contenedor central con efecto de entrada */
 .hero-content {
-  text-align: center;
-  animation: fadeIn 1s ease-in-out;
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 24px;
+animation: fadeIn 1s ease-in-out;
 }
 
 /* Títulos y textos con animación slideIn */
 .hero-title {
-  font-size: 3rem;
-  margin-bottom: 20px;
-  color: #222;
+  color: #000;
+font-family: Montserrat;
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+
   animation: slideIn 1s ease-out;
+  margin: 0;
+
+
+line-height: 100%;
+letter-spacing: 0%;
+
+
+
+
+
 }
 
 .hero-subtitle {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
-  color: #444;
+  color: #000;
+font-family: Lora;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
   animation: slideIn 1s ease-out 0.3s forwards;
   opacity: 0;
+  margin: 0;
 }
 
 .hero-tagline {
@@ -41,34 +79,36 @@
   opacity: 0;
 }
 
-/* Botones CTA */
-.hero-buttons {
+.texts {
   display: flex;
-  justify-content: center;
-  gap: 20px;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
 }
 
-.btn {
-  padding: 12px 24px;
-  text-decoration: none;
-  border-radius: 4px;
-  transition: transform 0.3s, background-color 0.3s;
+
+/* Botones CTA */
+button {
+  display: flex;
+padding: 16px;
+justify-content: center;
+align-items: center;
+gap: 12px;
+border-radius: 16px;
+border: 1px solid #AB63F8;
+background: #FFF;
 }
 
-.btn-primary {
-  background-color: #222;
-  color: #fff;
+button:hover {
+  border-radius: 16px;
+  border: 1px solid #E4347A;
+  background: #FFF;
+  
+  /* hover shadow */
+  box-shadow: 0px 17px 5px 0px rgba(228, 52, 122, 0.00), 0px 11px 4px 0px rgba(228, 52, 122, 0.01), 0px 6px 4px 0px rgba(228, 52, 122, 0.05), 0px 3px 3px 0px rgba(229, 230, 235, 0.09), 0px 1px 1px 0px rgba(228, 52, 122, 0.10);
 }
 
-.btn-secondary {
-  background-color: #fff;
-  color: #222;
-  border: 2px solid #222;
-}
 
-.btn:hover {
-  transform: scale(1.05);
-}
 
 /* Animaciones básicas */
 @keyframes fadeIn {
