--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -17,7 +17,7 @@ body {
   overflow: hidden;
   height: 80vh;
   border-radius: 4px;
-  background-color: #fff;
+  
 }
 
 .p-wrapper {
@@ -34,8 +34,8 @@ section {
   height: 100%;
   padding: 24px;
   border-radius: 12px;
-  border: 2px solid #f5f5f5;
-  background: #fff;
+  
+  
   overflow: hidden;
   
 }
@@ -73,12 +73,12 @@ section {
   display: flex;
   align-items: center;
   gap: 16px;
-  margin-bottom: 16px;
+  
   flex-direction: column;
 }
 
 .project-preview img {
-  height: 160px;
+  height: 280px;
   object-fit: cover;
   border-radius: 8px;
 }
@@ -146,11 +146,11 @@ button:hover {
 
 /* Modal overlay */
 .modal-overlay {
-  position: fixed;
+  /*position: fixed;*/
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 20vh;
   background-color: rgba(0,0,0,0.5);
   display: flex;
   justify-content: center;
@@ -172,7 +172,7 @@ button:hover {
 
 /* Close button */
 .close-btn {
-  position: absolute;
+  
   top: 10px;
   right: 10px;
   background: transparent;
