--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="layout">
   <div class="hero">
     <div class="hero-content">
-      <img src="assets/Iconos/Presentacion.svg" alt="Foto de perfil" class="hero-image">
+      
+      <img src="assets/Iconos/Presentacion.svg" alt="Foto de perfil de Noelia Valle, diseñadora UX/UI" class="hero-image">
 
       <div class="texts"> 
         <h1 class="hero-title">Noelia Valle</h1>
