--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,10 @@
-
-<div class="container">
-
-  
-
-  <div class="nav">
-
-  
-
-  </div>
-
-  <div class="body">
-    <app-header></app-header>
-    <router-outlet></router-outlet>
-
-  </div>
-
-</div>
-
-
-
-
-
+<body>
+  <header>
+      <app-header></app-header>
+  </header>
+  <main>
+      <router-outlet></router-outlet>
+      
+  </main>
+</body>
 
